--- a/Major_Project_NW272.ipynb
+++ b/Major_Project_NW272.ipynb
@@ -74,7 +74,7 @@
         "def import_df(arr):\n",
         "  for x in arr:\n",
         "    df_name = x[:3] + '_df'\n",
-        "    df = pd.read_csv(x,sep='\\t')\n",
+        "    df = pd.read_csv('/content/' + x,sep='\\t')\n",
         "    df = df.drop(['Exosomal/Non-exosomal'], axis=1)\n",
         "    df = df.drop(['Biomarker_Type'], axis=1)  \n",
         "    df['Target'] = df['Disease_name'].apply(lambda x: 1 if x == 'Oral Cancer' else 0)\n",
